--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved>
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
+    <style is="custom-style">
+      #TZA {
+        background-color: #00A000;
+        align-self: stretch;
+
+      }
+    </style>
 
 
     <!-- Uncomment next block to enable Service Worker support (1/2) -->
