--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -53,7 +53,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   body {
     @apply(--layout-fullbleed);
-    @apply(--layout-vertical);
+    @apply(--layout-horizontal);
   }
 
   .space {
