toolbar elements, broken

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -18,6 +18,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-material/paper-material.html">
 <link rel="import" href="../bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
@@ -37,3 +38,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
+<link rel="import" href="TZ-toolbar/TZ-toolbar.html">
+<link rel="import" href="TZ-toolbar-search/TZ-toolbar-search.html">
+<link rel="import" href="TZ-toolbar-tools/TZ-toolbar-tools.html">
+<link rel="import" href="TZ-toolbar-user-menu/TZ-toolbar-user-menu.html">
+<link rel="import" href="TZ-toolbar-nav/TZ-toolbar-nav.html">
