--- a/app/test/index.html
+++ b/app/test/index.html
@@ -11,27 +11,33 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <html>
 
-  <head>
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <title>Elements Test Runner</title>
-    <meta charset="UTF-8">
+<head>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <title>Elements Test Runner</title>
+  <meta charset="UTF-8">
 
-    <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
-    <script src="../bower_components/web-component-tester/browser.js"></script>
-  </head>
+  <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <script src="../bower_components/web-component-tester/browser.js"></script>
+</head>
 
-  <body>
+<body>
 
-    <script>
-      WCT.loadSuites([
-        'my-greeting-basic.html',
-        'my-greeting-basic.html?dom=shadow',
-        'my-list-basic.html',
-        'my-list-basic.html?dom=shadow'
-      ]);
-    </script>
+  <script>
+    WCT.loadSuites([
+      'my-greeting-basic.html',
+      'my-greeting-basic.html?dom=shadow',
+      'my-list-basic.html',
+      'my-list-basic.html?dom=shadow',
+      'TZ-search-basic.html',
+      'TZ-search-basic.html?dom=shadow',
+      'TZ-toolbar-tools-basic.html',
+      'TZ-toolbar-tools-basic.html?dom=shadow',
+      'TZ-toolbar-user-menu-basic.html',
+      'TZ-toolbar-user-menu-basic.html?dom=shadow'
+    ]);
+  </script>
 
 
-  </body>
+</body>
 
 </html>
