--- a/app/test/index.html
+++ b/app/test/index.html
@@ -33,7 +33,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       'TZ-toolbar-tools-basic.html',
       'TZ-toolbar-tools-basic.html?dom=shadow',
       'TZ-toolbar-user-menu-basic.html',
-      'TZ-toolbar-user-menu-basic.html?dom=shadow'
+      'TZ-toolbar-user-menu-basic.html?dom=shadow',
+      'TZ-content-basic.html',
+      'TZ-content-basic.html?dom=shadow'
     ]);
   </script>
 
