removed flex-ratio-1 from toolbar element

--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </paper-header-panel>
 -->
 
-      <div class="toolbar flex-ratio-1">TOOLBAR</div>
+      <div class="toolbar">TOOLBAR</div>
       <div class="layout horizontal justify wrap main-content flexchild flex">
         <nav>
           <div>navigation</div>
