--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .main-content {
         background-color: grey;
-        overflow: hidden;
+        min-height: 10px;
       }
       nav {
         background-color: white;
@@ -85,7 +85,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         overflow-y: auto;
       }
       nav, aside {
-        width: 200px;
+
       }
     </style>
 <!--
@@ -101,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div class="toolbar">TOOLBAR</div>
       <div class="layout horizontal justify wrap main-content flexchild flex">
-        <nav>
+        <nav class="flex-2">
           <div>navigation</div>
           <div>navigation</div>
           <div>navigation</div>
@@ -123,7 +123,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div>navigation</div>
           <div>navigation</div>
         </nav>
-        <main class="flex">
+        <main class="flex-10">
           <div>content</div>
           <div>content</div>
           <div>content</div>
@@ -221,39 +221,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div>content</div>
           <div>content</div>
         </main>
-        <aside>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-          <div>aside</div>
-        </aside>
+
       </div>
     <!-- Uncomment next block to enable Service Worker support (1/2) -->
     <!--
