--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body unresolved>
   <span id="browser-sync-binding"></span>
   <template is="dom-bind" id="app">
+
+    <iron-media-query query="(min-width: 600px)" query-matches="{{wide}}"></iron-media-query>
     <style is="custom-style">
       .toolbar{
         background-color: #00AA00;
@@ -101,28 +103,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <div class="toolbar">TOOLBAR</div>
       <div class="layout horizontal justify wrap main-content flexchild flex">
-        <nav class="flex-2">
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-          <div>navigation</div>
-        </nav>
+        <template is="dom-if" if="{{wide}}">
+            <nav class="flex-2">
+
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+              <div>navigation</div>
+            </nav>
+        </template>
         <main class="flex-10">
           <div>content</div>
           <div>content</div>
