removed nonsense attribute

--- a/app/index.html
+++ b/app/index.html
@@ -109,7 +109,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         Toolbar
       </div>
       <div class="layout horizontal justify wrap main-content flexchild flex">
-        <template is="dom-if" hidden if="{{wide}}" >
+        <template is="dom-if"  if="{{wide}}" >
             <nav class="flex-2">
 
               <div>navigation</div>
