MD layout working fine but not as desired

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -52,3 +52,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="TZ-content/TZ-content.html">
 <link rel="import" href="TZ-content-nav/TZ-content-nav.html">
 <link rel="import" href="TZ-content-aside/TZ-content-aside.html">
+<link rel="import" href="TZ-toolbar-menu-button/TZ-toolbar-menu-button.html">
+<link rel="import" href="TZ-layout/TZ-layout.html">
