3-stage layout working, "overflow-y: auto" bug in Chrome not fixed

--- a/app/index.html
+++ b/app/index.html
@@ -300,7 +300,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
     <paper-drawer-panel>
-      <paper-header-panel drawer>
+      <paper-header-panel drawer style="background-color: #00AA00">
         <paper-toolbar>
           <div>SIDEMENU</div>
         </paper-toolbar>
@@ -327,42 +327,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div>aaa</div>
           <div>aaa</div>
           <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
-          <div>aaa</div>
         </div>
       </paper-header-panel>
-      <paper-header-panel main class="flex">
+      <paper-header-panel main>
         <paper-toolbar>
           <paper-icon-button icon="menu" paper-drawer-toggle></paper-icon-button>
           <div class="title">Team Zeus</div>
@@ -383,46 +350,43 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </paper-item>
             </paper-menu>
           </paper-menu-button>
-          </paper-toolbar>
-          <paper-drawer-panel id="panel2" right-drawer force-narrow>
-            <div drawer style="overflow-y: auto;">
+        </paper-toolbar>
+        <div>
+          <paper-drawer-panel id="panel2" right-drawer narrow responsive-width="1919px">
+            <div drawer style="overflow-y: auto; width: 100%;">
               <paper-toolbar>
                 <div>;dalskfj</div>
               </paper-toolbar>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
-              <div>bbb</div>
+              <div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+                <div>b</div>
+              </div>
             </div>
-            <section main style="background-color: #AA3333; padding: 20px 60px 20px 20px; overflow-y: auto" class="flex" >
+            <div main style="overflow-y: auto;">
+            <section  style="background-color: #AA3333; padding: 20px 60px 20px 20px;">
+
               <paper-icon-button icon="menu" onClick="document.querySelector('#panel2').togglePanel()" style="position: fixed; top: 80px; right: 20px;"></paper-icon-button>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis iaculis purus, ac porta nisl vehicula non. Pellentesque iaculis, ipsum ut placerat viverra, nisl felis tempor sem, quis dictum quam libero eget mi. Fusce in ex tempor, convallis lorem non, scelerisque augue. Proin laoreet maximus justo quis imperdiet. Pellentesque nibh urna, mattis at tincidunt in, rutrum at urna. In nec commodo massa. Sed ornare urna ipsum, vitae eleifend nulla mattis at. Sed hendrerit eleifend tellus ac tristique. Fusce massa metus, mollis non porttitor at, malesuada quis eros.
 
@@ -525,9 +489,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               Nulla et nulla libero. Cras consequat, metus at ullamcorper hendrerit, nisi orci mollis lacus, vel dapibus augue leo vel massa. Quisque sed malesuada orci. Nullam ac mauris sit amet nisl vehicula pulvinar. Nullam gravida erat vitae mauris efficitur vehicula. Praesent diam quam, gravida ac ligula a, volutpat ornare massa. Mauris non tempus nibh. Vivamus quam mi, venenatis nec risus sed, faucibus condimentum nulla. Sed vitae est viverra, sagittis tortor non, pulvinar diam. Sed condimentum pharetra pellentesque. Quisque at enim pharetra, porta magna id, fringilla diam.
 
               Vivamus lacinia non ligula id mollis. Donec eleifend lorem sem, in bibendum orci tincidunt eu. Ut pharetra luctus nulla, nec finibus nisl imperdiet et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vivamus auctor dignissim ante a molestie. Vivamus facilisis tincidunt fermentum. In mollis mauris at nibh gravida ultricies. Mauris accumsan ex vitae massa hendrerit finibus et vulputate nunc. Vivamus ullamcorper nisi aliquet, cursus orci sit amet, ullamcorper nisi. Suspendisse augue lectus, luctus eget laoreet ac, euismod quis metus.
-
             </section>
+            </div>
           </paper-drawer-panel>
+        </div>
       </paper-header-panel>
     </paper-drawer-panel>
 
