chrome "overflow-y: auto" bug fixed (overflow-x: hidden; added. WTF)

--- a/app/index.html
+++ b/app/index.html
@@ -327,6 +327,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div>aaa</div>
           <div>aaa</div>
           <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+          <div>aaa</div>
+
+
         </div>
       </paper-header-panel>
       <paper-header-panel main>
@@ -353,11 +384,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </paper-toolbar>
         <div>
           <paper-drawer-panel id="panel2" right-drawer narrow responsive-width="1919px">
-            <div drawer style="overflow-y: auto; width: 100%;">
+            <div drawer style="overflow-y: auto; overflow-x: hidden">
               <paper-toolbar>
                 <div>;dalskfj</div>
               </paper-toolbar>
-              <div>
+
                 <div>b</div>
                 <div>b</div>
                 <div>b</div>
@@ -377,12 +408,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 <div>b</div>
                 <div>b</div>
                 <div>b</div>
-                <div>b</div>
-                <div>b</div>
-                <div>b</div>
-                <div>b</div>
-                <div>b</div>
-              </div>
             </div>
             <div main style="overflow-y: auto;">
             <section  style="background-color: #AA3333; padding: 20px 60px 20px 20px;">
